# re-spec-mobile

./: .gitignore  CLAUDE.md  INSTALL.sh  PRD_iOS_Authenticator_DRAFT.md  README.md  pyproject.toml
agents/: app-explorer.md  spec-writer.md
docs/: DOGFOOD_REPORT.md  I18N_GLOSSARY.md  MIGRATION.md  OPERATIONS.md  ROADMAP_NONTECH.md  SLIDE_SCRIPT.md  all_architecture.html  architecture.html  index.html  slides.html
examples/: bible-agent.spec-profile.yml
skills/re-spec-mobile/: SKILL.md
src/re_spec_mobile/: __init__.py  app_overview.py  build_graph.py  capture.py  coverage_check.py  coverage_report.py  init_project.py  mcp_server.py  nav_graph.py  observations_tmpl.py  paths.py  pm_channel.py  pm_doc_lint.py  profile_loader.py  render_nav.py  scope_loader.py  spec_query.py  validate_spec.py
src/re_spec_mobile/_data/_shell/: register-mcp-user.sh  setup_portal.sh
src/re_spec_mobile/_data/canonical/: README.md  SPEC_SCHEMA.md  app_overview.sample.md  feature_spec.sample.md  observations.sample.md  spec.sample.md
src/re_spec_mobile/_data/templates/: app_overview.md.tmpl  coverage_report.md.tmpl  feature_spec.md.tmpl  observations.md.tmpl  profile.schema.yml  profile.template.yml  scope.md.tmpl  spec.md.tmpl
